# aoc2022

./: Cargo.toml  run.sh
answers/: day-04  day-06  day-07  day-09  day-10  day-14  day-16
samples/: day-02
src/: common.rs  coord.rs  grid.rs  lib.rs
