[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
maplit = "1"
regex = "*"
slab_tree = "*"
peg = "*"
petgraph = "*"
bitvec = "*"
array-init = "2"